--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <style>
     :root{
       --bg:#fad075;
-;
       --card:#0e404c;
-;
       --text: #c07723;
       --muted: #f89b9b;
       --primary: #484841;
@@ -101,39 +99,6 @@
 
     main{max-width:100%;margin:0;padding:0 12px;position:relative;z-index:2}
 
-    .offer-slider{max-width:100%;margin:12px 0;border-radius:8px;overflow:hidden;box-shadow:0 4px 12px var(--shadow);position:relative;}
-    .slides{display:flex; width:400%; animation:slide 20s infinite cubic-bezier(0.8, 0, 0.2, 1); }
-    .slide {
-      min-width:100%;
-      height:100px;
-      background-size:cover;
-      background-position:center;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      position:relative;
-      padding:12px;
-      text-decoration: none;
-      transition: transform 0.4s;
-    }
-    .slide:hover { transform: scale(1.01); }
-    .slide::after{content:"";position:absolute;inset:0;background:linear-gradient(135deg, rgba(40,116,240,0.1), rgba(0,0,0,0.1));mix-blend-mode:overlay;}
-    .slide .label{
-      position:relative;z-index:2;
-      background: rgba(255, 255, 255, 0.3);
-      backdrop-filter: blur(5px);
-      border: 1px solid rgba(255, 255, 255, 0.5);
-      color:white;
-      padding:8px 12px;border-radius:999px;font-weight:800;
-      text-shadow: 0 0 5px rgba(0,0,0,0.3);
-      box-shadow:0 4px 12px rgba(0,0,0,0.2);
-      transition: background 0.3s;
-    }
-    .slide:hover .label { background: rgba(255, 255, 255, 0.4); }
-    @keyframes slide {
-      0%, 23%{transform:translateX(0%)} 25%, 48%{transform:translateX(-100%)} 50%, 73%{transform:translateX(-200%)} 75%, 98%{transform:translateX(-300%)} 100%{transform:translateX(0%)}
-    }
-
     .quotes-section { max-width:100%; margin:12px 0; padding:12px; background:linear-gradient(135deg, #e3f2fd, #fff); border-radius:8px; box-shadow:0 4px 12px var(--shadow); text-align:center; }
     .quote { font-style:italic; color:var(--muted); font-size:14px; }
     .quote-author { font-weight:700; color:var(--primary); margin-top:4px; }
@@ -203,9 +168,6 @@
       .profile-section .avatar { width:56px; height:56px; font-size:28px; }
       .sidebar a { padding:12px; margin-top:12px; }
       main { max-width:1180px; margin:22px auto; padding:0 18px; }
-      .offer-slider { max-width:860px; margin:0 auto 20px; }
-      .slide { height:220px; padding:22px; }
-      .slide .label { font-size: 16px; }
       .quotes-section { max-width:860px; margin:18px auto; padding:18px; font-size:16px; }
       .tab-switch { max-width:860px; margin:18px auto; justify-content:center; overflow-x:hidden; }
       .tab-btn { min-width:auto; flex:1; padding:12px 16px; font-size:16px; }
@@ -225,216 +187,4 @@
     }
   </style>
 </head>
-<body>
-  <div class="floating-icons" aria-hidden="true">
-    <svg class="float-svg float-1" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-      <g fill="none" fill-rule="evenodd">
-        <ellipse fill="#FFE0B2" cx="32" cy="18" rx="20" ry="10"/>
-        <rect fill="#FFC107" x="18" y="22" width="28" height="6" rx="3"/>
-        <rect fill="#D32F2F" x="16" y="28" width="32" height="6" rx="3"/>
-        <rect fill="#4CAF50" x="14" y="34" width="36" height="6" rx="3"/>
-        <ellipse fill="#FFCC80" cx="32" cy="46" rx="20" ry="10"/>
-      </g>
-    </svg>
-    <svg class="float-svg float-2" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-      <g fill="none" fill-rule="evenodd">
-        <path fill="#FFE0B2" d="M32 4L54 60H10z"/>
-        <path fill="#F44336" d="M32 10L50 50H14z"/>
-        <path fill="#FFC107" d="M32 16L46 42H18z"/>
-        <circle fill="#388E3C" cx="28" cy="30" r="3"/>
-        <circle fill="#388E3C" cx="36" cy="36" r="3"/>
-      </g>
-    </svg>
-    <svg class="float-svg float-3" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-      <g fill="none" fill-rule="evenodd">
-        <rect fill="#FFFFFF" x="18" y="16" width="28" height="30" rx="4"/>
-        <rect fill="#BBDEFB" x="18" y="16" width="28" height="5"/>
-        <path fill="#2874F0" d="M46 22c5 0 9 4 9 9v14c0 5-4 9-9 9H18c-5 0-9-4-9-9v-14c0-5 4-9 9-9h28z"/>
-        <path stroke="#FF9800" stroke-width="4" stroke-linecap="round" d="M30 10c0 4 4 8 8 8"/>
-        <circle fill="#FF9800" cx="32" cy="12" r="2"/>
-      </g>
-    </svg>
-    <svg class="float-svg float-4" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-      <g fill="none" fill-rule="evenodd">
-        <path fill="#FBE0B2" d="M12 40h40L45 52H19z"/>
-        <path fill="#FF9800" d="M20 40c0-6 4-10 8-10s8 4 8 10"/>
-        <path fill="#FF9800" d="M36 40c0-8 6-12 12-12"/>
-        <rect fill="#D32F2F" x="24" y="32" width="6" height="6" rx="2"/>
-        <rect fill="#4CAF50" x="34" y="28" width="6" height="6" rx="2"/>
-      </g>
-    </svg>
-    <svg class="float-svg float-5" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-      <g fill="none" fill-rule="evenodd">
-        <path fill="#FFD700" d="M32 4l9 18h19l-15 11 6 18-19-11-19 11 6-18-15-11h19z"/>
-        <circle fill="#FF9800" cx="32" cy="32" r="4"/>
-      </g>
-    </svg>
-  </div>
-
-  <header role="banner">
-    <button id="navBtn" class="nav-btn" aria-label="Open menu">
-      <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M4 7h16M4 12h16M4 17h16" stroke="#fff" stroke-width="1.6" stroke-linecap="round"/></svg>
-    </button>
-    <div class="brand">Chat<span>Point</span></div>
-    <div class="header-right">
-      <button class="cart-btn" aria-label="Cart">🛒 Cart</button>
-    </div>
-  </header>
-
-  <aside id="sidebar" class="sidebar" aria-hidden="true">
-    <div class="profile-section" id="profileSection" aria-live="polite">
-      <div class="avatar">🙂</div>
-      <div class="meta">Welcome<div style="font-size:13px;color:var(--muted);font-weight:600">Sign in for offers</div></div>
-    </div>
-    <nav aria-label="Main navigation" style="margin-top:14px">
-      <a href="orders.html"><i class="fas fa-shopping-bag" style="margin-right:8px;"></i> My Orders</a>
-      <a href="tel:9632367397"><i class="fas fa-phone-alt" style="margin-right:8px;"></i> Contact: 9632367397</a>
-      <a href="#" id="logout" style="display:none;"><i class="fas fa-sign-out-alt" style="margin-right:8px;"></i> Logout</a>
-    </nav>
-    <div style="margin-top:auto;font-size:13px;color:var(--muted);padding-top:18px">© 2025 Chat Point</div>
-  </aside>
-
-  <div id="overlay" class="overlay" tabindex="-1"></div>
-
-  <main>
-    
-
-    <section class="quotes-section">
-      <div class="quote">"Food is symbolic of love when words are inadequate." – Alan D. Wolfelt</div>
-      <div class="quote-author">Life & Food Wisdom</div>
-    </section>
-
-    <div class="tab-switch" role="tablist" aria-label="Food or Grocery">
-      <a href="index.html" id="foodBtn" class="tab-btn food" role="tab" aria-selected="true"><i class="fas fa-utensils" style="margin-right:8px"></i> Food</a>
-      <a href="grocery.html" id="groceryBtn" class="tab-btn grocery inactive" role="tab" aria-selected="false"><i class="fas fa-shopping-basket" style="margin-right:8px"></i> Grocery</a>
-    </div>
-
-    <div class="search-bar" role="search">
-      <input type="text" id="searchInput" placeholder="Search your favorite shop..." oninput="searchShops()" aria-label="Search shops">
-      <i class="fas fa-search icon"></i>
-    </div>
-
-    <section class="quotes-section">
-      <div class="quote">"One cannot think well, love well, sleep well, if one has not dined well." – Virginia Woolf</div>
-      <div class="quote-author">Inspire Your Meal</div>
-    </section>
-
-    <section class="grid" id="grid" aria-live="polite" aria-label="Shops list"></section>
-  </main>
-
-  <footer>© 2025 Chat Point • Made with Passion</footer>
-
-  <script>
-     const shops = [
-      { name: "Chat Point", img: "https://plus.unsplash.com/premium_photo-1670601440146-3b33dfcd7e17?w=600&amp;auto=format&amp;fit=crop&amp;q=60&amp;ixlib=rb-4.1.0&amp;ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8Zm9vZHxlbnwwfHwwfHx8MA%3D%3D", rating: 4.9, desc: "Your favorite hangout – burgers, chats, coffee & vibes!", items: ["Zinger Burger", "Peri Peri Fries", "Cold Coffee", "Oreo Shake", "Chicken Roll"] },
-      { name: "Sangambar Udupi Hotel", img: "https://plus.unsplash.com/premium_photo-1673108852141-e8c3c22a4a22?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Zm9vZHxlbnwwfHwwfHx8MA%3D%3D", rating: 4.6, desc: "Pure vegetarian South Indian meals.", items: ["Masala Dosa", "Idli Vada", "Puri Bhaji", "Filter Coffee"] },
-      { name: "Nandi Grand Hotels", img: "https://plus.unsplash.com/premium_photo-1674106347866-8282d8c19f84?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTI5fHxmb29kfGVufDB8fDB8fHww", rating: 4.7, desc: "Crispy dosas with authentic flavors.", items: ["Plain Dosa", "Ghee Roast", "Onion Uttapam", "Podi Idli"] },
-      { name: "Pizza Spot", img: "https://plus.unsplash.com/premium_photo-1723478418445-b13c20b21231?q=80&w=1125&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D", rating: 4.5, desc: "Loaded pizzas with fresh toppings.", items: ["Margherita", "Pepperoni", "Veggie Supreme", "BBQ Chicken"] },
-      { name: "Fly Pizza", img: "https://plus.unsplash.com/premium_photo-1679924471091-f7cd7ad90ddf?q=80&w=1169&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D", rating: 4.6, desc: "100% veg pizzas, light & tasty.", items: ["Paneer Tikka", "Corn & Cheese", "Farmhouse", "Veg Extravaganza"] },
-      { name: "Mister Chef", img: "https://images.unsplash.com/photo-1594179047519-f347310d3322?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8ZmFzdCUyMGZvb2R8ZW58MHx8MHx8fDA%3D", rating: 4.7, desc: "Juicy burgers with secret sauce.", items: ["Classic Burger", "Cheese Blast", "Veg Crunch", "Fries Combo"] },
-      { name: "Dolphin Hotel", img: "https://images.unsplash.com/photo-1496412705862-e0088f16f791?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mjd8fGZvb2QlMjBwaG90b2dyYXBoeXxlbnwwfHwwfHx8MA%3D%3D", rating: 4.5, desc: "Fresh sandwiches & healthy bites.", items: ["Veg Sandwich", "Grilled Cheese", "Club Sandwich", "Cold Coffee"] },
-      { name: "Hasanamba Iyengar Bakery", img: "https://plus.unsplash.com/premium_photo-1665669263531-cdcbe18e7fe4?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8YmFrZXJ5fGVufDB8fDB8fHww", rating: 4.5, desc: "Fresh baked goods and sweet treats.", items: ["Plum Cake", "Cookies", "Croissant", "Puff Pastry"] }
-    ];
-
-
-    function renderShops(filter = "") {
-      const grid = document.getElementById("grid");
-      grid.innerHTML = "";
-      shops
-        .filter(shop => shop.name.toLowerCase().includes(filter.toLowerCase()))
-        .forEach(shop => {
-          const cardWrap = document.createElement("div");
-          cardWrap.className = "card-wrap";
-
-          const card = document.createElement("div");
-          card.className = "card";
-          card.role = "button";
-          card.tabIndex = 0;
-          card.onclick = () => {
-            localStorage.setItem("currentShop", JSON.stringify({ name: shop.name, items: shop.items }));
-            location.href = `items.html?shop=${encodeURIComponent(shop.name)}`;
-          };
-          card.onkeydown = e => { if (e.key === "Enter") card.click(); };
-
-          const img = document.createElement("img");
-          img.src = shop.img;
-          img.alt = `${shop.name} image`;
-          img.loading = "lazy";
-          img.onerror = function() { this.src = `https://via.placeholder.com/420x260/2874F0/FF9800?text=${encodeURIComponent(shop.name)}`; };
-
-          const badge = document.createElement("div");
-          badge.className = "badge-offer";
-          badge.textContent = shop.rating >= 4.7 ? "⭐ TOP RATED" : "🔥 OFFER";
-
-          const info = document.createElement("div");
-          info.className = "info";
-          info.innerHTML = `<div class="shop-name">${shop.name}</div><div class="rating" aria-label="Rating ${shop.rating}"><i class="fas fa-star"></i> ${shop.rating}</div>`;
-
-          const desc = document.createElement("div");
-          desc.className = "desc";
-          desc.textContent = shop.desc;
-
-          const itemsRow = document.createElement("div");
-          itemsRow.className = "items-row";
-          shop.items.slice(0, 4).forEach(item => {
-            const pill = document.createElement("div");
-            pill.className = "item-pill";
-            pill.textContent = item;
-            itemsRow.appendChild(pill);
-          });
-
-          card.append(img, info, desc, itemsRow);
-          cardWrap.append(card);
-          if (Math.random() > 0.4) cardWrap.append(badge);
-          grid.append(cardWrap);
-        });
-    }
-
-    function searchShops() {
-      renderShops(document.getElementById("searchInput").value.trim());
-    }
-
-    document.getElementById("navBtn").onclick = () => {
-      document.getElementById("sidebar").classList.add("active");
-      document.getElementById("sidebar").setAttribute("aria-hidden", "false");
-      document.getElementById("overlay").classList.add("active");
-    };
-
-    document.getElementById("overlay").onclick = () => {
-      document.getElementById("sidebar").classList.remove("active");
-      document.getElementById("sidebar").setAttribute("aria-hidden", "true");
-      document.getElementById("overlay").classList.remove("active");
-    };
-
-    function loadProfile() {
-      const user = JSON.parse(localStorage.getItem("chatpoint_user") || "null");
-      const profile = document.getElementById("profileSection");
-      const logoutBtn = document.getElementById("logout");
-      if (user && user._id) {
-        profile.innerHTML = `<div style="display:flex;gap:12px;align-items:center">
-          <div class="avatar"><i class="fas fa-user"></i></div>
-          <div style="font-weight:800"><div>${user.name}</div><div style="font-size:13px;color:var(--muted);font-weight:600">${user.phone}</div></div>
-        </div>`;
-        logoutBtn.style.display = "block";
-        logoutBtn.onclick = () => { localStorage.removeItem("chatpoint_user"); location.reload(); };
-      } else {
-        profile.innerHTML = `<div style="font-size:15px;"><div style="display:flex;align-items:center;gap:10px"><div class="avatar" style="background:#e3f2fd">🙂</div><div style="font-weight:700">Welcome</div></div><div style="margin-top:8px;color:var(--accent);font-size:13px"><a href="login.html" style="color:var(--accent);text-decoration:underline">Login to see profile</a></div></div>`;
-        logoutBtn.style.display = "none";
-      }
-    }
-
-    window.addEventListener("load", () => {
-      const path = location.pathname.split("/").pop();
-      if (path === "grocery.html") {
-        document.getElementById("foodBtn").classList.add("inactive");
-        document.getElementById("groceryBtn").classList.remove("inactive");
-      }
-    });
-
-    window.onload = () => {
-      renderShops();
-      loadProfile();
-    };
-  </script>
-</body>
-</html>
+<body
