--- a/index.html
+++ b/index.html
@@ -187,4 +187,104 @@
     }
   </style>
 </head>
-<body
+<body>
+  <div class="floating-icons" aria-hidden="true">
+    <svg class="float-svg float-1" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
+      <g fill="none" fill-rule="evenodd">
+        <ellipse fill="#FFE0B2" cx="32" cy="18" rx="20" ry="10"/>
+        <rect fill="#FFC107" x="18" y="22" width="28" height="6" rx="3"/>
+        <rect fill="#D32F2F" x="16" y="28" width="32" height="6" rx="3"/>
+        <rect fill="#4CAF50" x="14" y="34" width="36" height="6" rx="3"/>
+        <ellipse fill="#FFCC80" cx="32" cy="46" rx="20" ry="10"/>
+      </g>
+    </svg>
+    <svg class="float-svg float-2" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
+      <g fill="none" fill-rule="evenodd">
+        <path fill="#FFE0B2" d="M32 4L54 60H10z"/>
+        <path fill="#F44336" d="M32 10L50 50H14z"/>
+        <path fill="#FFC107" d="M32 16L46 42H18z"/>
+        <circle fill="#388E3C" cx="28" cy="30" r="3"/>
+        <circle fill="#388E3C" cx="36" cy="36" r="3"/>
+      </g>
+    </svg>
+    <svg class="float-svg float-3" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
+      <g fill="none" fill-rule="evenodd">
+        <rect fill="#FFFFFF" x="18" y="16" width="28" height="30" rx="4"/>
+        <rect fill="#BBDEFB" x="18" y="16" width="28" height="5"/>
+        <path fill="#2874F0" d="M46 22c5 0 9 4 9 9v14c0 5-4 9-9 9H18c-5 0-9-4-9-9v-14c0-5 4-9 9-9h28z"/>
+        <path stroke="#FF9800" stroke-width="4" stroke-linecap="round" d="M30 10c0 4 4 8 8 8"/>
+        <circle fill="#FF9800" cx="32" cy="12" r="2"/>
+      </g>
+    </svg>
+    <svg class="float-svg float-4" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
+      <g fill="none" fill-rule="evenodd">
+        <path fill="#FBE0B2" d="M12 40h40L45 52H19z"/>
+        <path fill="#FF9800" d="M20 40c0-6 4-10 8-10s8 4 8 10"/>
+        <path fill="#FF9800" d="M36 40c0-8 6-12 12-12"/>
+        <rect fill="#D32F2F" x="24" y="32" width="6" height="6" rx="2"/>
+        <rect fill="#4CAF50" x="34" y="28" width="6" height="6" rx="2"/>
+      </g>
+    </svg>
+    <svg class="float-svg float-5" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
+      <g fill="none" fill-rule="evenodd">
+        <path fill="#FFD700" d="M32 4l9 18h19l-15 11 6 18-19-11-19 11 6-18-15-11h19z"/>
+        <circle fill="#FF9800" cx="32" cy="32" r="4"/>
+      </g>
+    </svg>
+  </div>
+
+  <header role="banner">
+    <button id="navBtn" class="nav-btn" aria-label="Open menu">
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M4 7h16M4 12h16M4 17h16" stroke="#fff" stroke-width="1.6" stroke-linecap="round"/></svg>
+    </button>
+    <div class="brand">Chat<span>Point</span></div>
+    <div class="header-right">
+      <button class="cart-btn" aria-label="Cart">🛒 Cart</button>
+    </div>
+  </header>
+
+  <aside id="sidebar" class="sidebar" aria-hidden="true">
+    <div class="profile-section" id="profileSection" aria-live="polite">
+      <div class="avatar">🙂</div>
+      <div class="meta">Welcome<div style="font-size:13px;color:var(--muted);font-weight:600">Sign in for offers</div></div>
+    </div>
+    <nav aria-label="Main navigation" style="margin-top:14px">
+      <a href="orders.html"><i class="fas fa-shopping-bag" style="margin-right:8px;"></i> My Orders</a>
+      <a href="tel:9632367397"><i class="fas fa-phone-alt" style="margin-right:8px;"></i> Contact: 9632367397</a>
+      <a href="#" id="logout" style="display:none;"><i class="fas fa-sign-out-alt" style="margin-right:8px;"></i> Logout</a>
+    </nav>
+    <div style="margin-top:auto;font-size:13px;color:var(--muted);padding-top:18px">© 2025 Chat Point</div>
+  </aside>
+
+  <div id="overlay" class="overlay" tabindex="-1"></div>
+
+  <main>
+    <section class="quotes-section">
+      <div class="quote">"Food is symbolic of love when words are inadequate." – Alan D. Wolfelt</div>
+      <div class="quote-author">Life & Food Wisdom</div>
+    </section>
+
+    <div class="tab-switch" role="tablist" aria-label="Food or Grocery">
+      <a href="index.html" id="foodBtn" class="tab-btn food" role="tab" aria-selected="true"><i class="fas fa-utensils" style="margin-right:8px"></i> Food</a>
+      <a href="grocery.html" id="groceryBtn" class="tab-btn grocery inactive" role="tab" aria-selected="false"><i class="fas fa-shopping-basket" style="margin-right:8px"></i> Grocery</a>
+    </div>
+
+    <div class="search-bar" role="search">
+      <input type="text" id="searchInput" placeholder="Search your favorite shop..." oninput="searchShops()" aria-label="Search shops">
+      <i class="fas fa-search icon"></i>
+    </div>
+
+    <section class="quotes-section">
+      <div class="quote">"One cannot think well, love well, sleep well, if one has not dined well." – Virginia Woolf</div>
+      <div class="quote-author">Inspire Your Meal</div>
+    </section>
+
+    <section class="grid" id="grid" aria-live="polite" aria-label="Shops list"></section>
+  </main>
+
+  <footer>© 2025 Chat Point • Made with Passion</footer>
+
+  <!-- External JavaScript file -->
+  <script src="index.js"></script>
+</body>
+</html>
