--- a/login.html
+++ b/login.html
@@ -18,7 +18,6 @@
       --shadow: 0 16px 48px rgba(0,0,0,0.35);
       --transition: all 280ms cubic-bezier(0.2, 0.8, 0.2, 1);
     }
-
     *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
     body {
       font-family: 'Outfit', sans-serif;
@@ -28,13 +27,12 @@
       display: grid;
       place-items: center;
       padding: 16px;
-      background-image: 
+      background-image:
         radial-gradient(circle at 20% 80%, rgba(226,55,68,0.08) 0%, transparent 50%),
         radial-gradient(circle at 80% 20%, rgba(255,255,255,0.03) 0%, transparent 40%),
         repeating-linear-gradient(45deg, transparent, transparent 20px, rgba(255,255,255,0.01) 20px, rgba(255,255,255,0.01) 40px);
       overflow-x: hidden;
     }
-
     /* Floating Food Icons */
     .bg-canvas {
       position: fixed; inset: 0; z-index: 0; pointer-events: none; overflow: hidden;
@@ -51,11 +49,9 @@
       0%,100% { transform: translateY(20vh) rotate(0deg) scale(0.9); }
       50% { transform: translateY(-18vh) rotate(180deg) scale(1.1); }
     }
-
     .container {
       width: 100%; max-width: 420px; z-index: 10; position: relative;
     }
-
     .card {
       background: var(--card);
       border-radius: var(--radius);
@@ -64,18 +60,15 @@
       border: 1px solid rgba(0,0,0,0.06);
       text-align: center;
     }
-
     .brand {
       display: flex; align-items: center; justify-content: center; gap: 6px; margin-bottom: 20px;
     }
     .brand span {
       font-size: 32px; font-weight: 900; color: var(--primary);
     }
-
     .lead {
       font-size: 22px; font-weight: 700; color: #222; margin-bottom: 24px;
     }
-
     .form-group { margin-bottom: 16px; text-align: left; }
     .input {
       width: 100%; padding: 16px 18px; border-radius: 12px;
@@ -89,7 +82,6 @@
       box-shadow: 0 0 0 4px var(--primary-light);
       background: white;
     }
-
     .btn {
       width: 100%; padding: 16px; margin-top: 12px;
       background: var(--primary); color: white;
@@ -99,7 +91,6 @@
       box-shadow: 0 8px 24px rgba(226,55,68,0.4);
     }
     .btn:hover { background: #d32f3b; transform: translateY(-3px); box-shadow: 0 16px 32px rgba(226,55,68,0.5); }
-
     .toggle-text {
       margin-top: 20px; font-size: 14.5px; color: var(--muted);
     }
@@ -107,7 +98,6 @@
       color: var(--primary); font-weight: 700; text-decoration: none;
     }
     .toggle-text a:hover { color: #c6303c; text-decoration: underline; }
-
     /* Loading Overlay */
     #loadingOverlay {
       position: fixed; inset: 0; background: rgba(18,18,18,0.95);
@@ -123,7 +113,6 @@
     .progress-fill {
       height: 100%; width: 0%; background: var(--primary); border-radius: 10px; transition: width 0.4s ease;
     }
-
     /* Responsive */
     @media (max-width: 480px) {
       .card { padding: 28px 24px; border-radius: 16px; }
@@ -134,7 +123,6 @@
   </style>
 </head>
 <body>
-
   <!-- Floating Background Icons -->
   <div class="bg-canvas" aria-hidden="true">
     <svg class="svg-1" viewBox="0 0 64 64"><defs><linearGradient id="g1"><stop offset="0" stop-color="#e23744"/><stop offset="1" stop-color="#ff6b35"/></linearGradient></defs><path d="M32 6 L54 46 A26 26 0 0 1 10 46 Z" stroke="url(#g1)" stroke-width="3" fill="none"/><circle cx="26" cy="36" r="3" fill="#e23744"/><circle cx="36" cy="34" r="3" fill="#e23744"/></svg>
@@ -142,13 +130,11 @@
     <svg class="svg-3" viewBox="0 0 64 64"><defs><linearGradient id="g3"><stop offset="0" stop-color="#e23744"/><stop offset="1" stop-color="#ff6b35"/></linearGradient></defs><rect x="18" y="18" width="28" height="28" rx="6" stroke="url(#g3)" stroke-width="3" fill="none"/><path d="M24 18 Q32 6 40 18" stroke="url(#g3)" stroke-width="3" fill="none"/></svg>
     <svg class="svg-4" viewBox="0 0 64 64"><defs><linearGradient id="g4"><stop offset="0" stop-color="#e23744"/><stop offset="1" stop-color="#ff6b35"/></linearGradient></defs><rect x="20" y="16" width="24" height="10" rx="4" stroke="url(#g4)" stroke-width="2.8" fill="none"/><rect x="24" y="26" width="4" height="18" fill="#e23744"/><rect x="30" y="26" width="4" height="18" fill="#e23744"/><rect x="36" y="26" width="4" height="18" fill="#e23744"/></svg>
   </div>
-
   <div class="container">
     <div class="card">
       <div class="brand">
         <span>Chat</span><span>Point</span>
       </div>
-
       <!-- Login Form -->
       <div id="loginForm">
         <div class="lead">Welcome back!</div>
@@ -163,7 +149,6 @@
           New to ChatPoint? <a href="#" id="showSignup">Create account</a>
         </div>
       </div>
-
       <!-- Signup Form -->
       <div id="signupForm" style="display:none">
         <div class="lead">Join ChatPoint</div>
@@ -183,7 +168,6 @@
       </div>
     </div>
   </div>
-
   <!-- Loading Overlay -->
   <div id="loadingOverlay">
     <div class="loader">
@@ -191,22 +175,18 @@
       <div id="loaderText">Connecting...</div>
     </div>
   </div>
-
   <script>
     const BASE_URL = window.location.origin;
     const $ = id => document.getElementById(id);
-
     // Elements
     const loginForm = $('loginForm');
     const signupForm = $('signupForm');
     const loading = $('loadingOverlay');
     const progress = $('progressFill');
     const loaderText = $('loaderText');
-
     // Toggle
     $('showSignup').onclick = e => { e.preventDefault(); loginForm.style.display = 'none'; signupForm.style.display = 'block'; };
     $('showLogin').onclick = e => { e.preventDefault(); signupForm.style.display = 'none'; loginForm.style.display = 'block'; };
-
     // Loading
     function showLoading() {
       loading.classList.add('active');
@@ -221,7 +201,6 @@
       }, 500);
       return () => { clearInterval(int); clearInterval(textInt); };
     }
-
     function hideLoading() {
       progress.style.width = '100%';
       setTimeout(() => {
@@ -229,23 +208,18 @@
         progress.style.width = '0%';
       }, 500);
     }
-
-    const isValidPhone = p => /^\d{10}$/.test(p.trim());
-
+    const isValidPhone = p => /^\d{10}$/.test(p);
     // Login
     $('btnLogin').onclick = async () => {
       const phone = $('loginPhone').value.trim();
       const pass = $('loginPassword').value;
-
       if (!phone || !pass) return alert('Please fill all fields');
       if (!isValidPhone(phone)) return alert('Enter a valid 10-digit phone number');
-
       if (phone === '1234567890' && pass === 'admin') {
         const stop = showLoading();
         setTimeout(() => { stop(); hideLoading(); location.href = 'delivery.html'; }, 1400);
         return;
       }
-
       const stop = showLoading();
       try {
         const res = await fetch(`${BASE_URL}/api/user/login`, {
@@ -255,7 +229,6 @@
         });
         const data = await res.json();
         stop(); hideLoading();
-
         if (data.success) {
           localStorage.setItem('chatpoint_user', JSON.stringify(data.user));
           location.href = 'index.html';
@@ -267,16 +240,13 @@
         alert('Network error. Please try again.');
       }
     };
-
     // Signup
     $('btnSignup').onclick = async () => {
       const name = $('signupName').value.trim();
       const phone = $('signupPhone').value.trim();
       const pass = $('signupPassword').value;
-
       if (!name || !phone || !pass) return alert('Please fill all fields');
       if (!isValidPhone(phone)) return alert('Enter a valid 10-digit phone number');
-
       const stop = showLoading();
       try {
         const res = await fetch(`${BASE_URL}/api/user/signup`, {
@@ -286,7 +256,6 @@
         });
         const data = await res.json();
         stop(); hideLoading();
-
         if (data.success) {
           alert('Account created successfully! Please login.');
           $('showLogin').click();
@@ -298,7 +267,6 @@
         alert('Network error. Please try again.');
       }
     };
-
     // Enter key support
     document.addEventListener('keydown', e => {
       if (e.key === 'Enter') {
