--- a/items.html
+++ b/items.html
@@ -10,7 +10,7 @@
   <style>
     :root {
       --brand-red: #f12916; --brand-yellow: #f4ff2a; --accent-green: #30bc1a;
-      --text-dark: #111827; --bg-light: #e6f0fb; --card-white: #f3cd98;
+      --text-dark: #111827; --bg-light: #e6f0fb; --card-white: #ffffff;
       --muted-text: #0f1b34; --border-light: rgba(14,19,26,0.08);
       --radius-xl: 1.5rem; --radius-lg: 0.75rem;
       --transition: 0.28s cubic-bezier(0.2,0.8,0.4,1);
@@ -31,25 +31,31 @@
     .shop-name { font-weight: 700; font-size: 0.9375rem; }
     main { max-width: 75rem; margin: 2rem auto; padding: 0 1rem; }
     .items-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 1.5rem; }
-    .item-card { background: var(--card-white); border-radius: var(--radius-xl); overflow: hidden;
-      box-shadow: var(--shadow); border: 1px solid var(--border-light);
-      transition: transform var(--transition), box-shadow var(--transition); }
-    .item-card:hover { transform: translateY(-0.5rem); box-shadow: 0 1rem 3rem rgba(15,23,42,0.15); }
-    .item-img { width: 100%; height: 12.5rem; object-fit: cover; background: #f0f0f0; }
-    .item-info { padding: 1rem 1.25rem 1.5rem; display: flex; flex-direction: column; gap: 0.5rem; }
-    .item-name { font-weight: 800; font-size: 1.125rem; word-break: break-word; }
-    .item-desc { font-size: 0.875rem; color: var(--muted-text); }
-    .price-container { display: flex; align-items: center; gap: 0.75rem; flex-wrap: wrap; }
-    .old-price { font-size: 1.1rem; color: #888; text-decoration: line-through red 3px; font-weight: 600; }
-    .new-price { font-weight: 900; color: var(--brand-red); font-size: 1.6rem; }
-    .discount-badge { background: var(--brand-red); color: white; font-size: 0.75rem; font-weight: 800;
-      padding: 0.25rem 0.5rem; border-radius: 0.5rem; margin-left: auto; }
-    .quantity { display: flex; align-items: center; gap: 0.625rem; margin-top: 0.75rem; }
-    .qbtn { min-width: 2.5rem; height: 2.5rem; border-radius: var(--radius-lg); border: 1px solid var(--border-light);
-      background: white; color: var(--brand-red); font-size: 1.25rem; font-weight: 700; cursor: pointer;
-      display: grid; place-items: center; transition: all var(--transition); }
-    .qbtn:hover { background: var(--brand-red); color: white; transform: translateY(-2px); }
-    .qty { min-width: 2rem; text-align: center; font-weight: 800; }
+    .item-card { 
+      background: var(--card-white); border-radius: var(--radius-lg); overflow: hidden;
+      box-shadow: var(--shadow); border: 1px solid var(--border-light); 
+      display: flex; align-items: center; padding: 1rem;
+      transition: transform var(--transition), box-shadow var(--transition); 
+      max-height: 140px; position: relative; cursor: grab;
+    }
+    .item-card:active { cursor: grabbing; }
+    .item-card:hover { transform: translateY(-0.25rem); box-shadow: 0 0.75rem 2rem rgba(15,23,42,0.1); }
+    .item-img { width: 120px; height: 120px; object-fit: cover; background: #f0f0f0; border-radius: var(--radius-lg); }
+    .item-info { flex: 1; padding-right: 1rem; display: flex; flex-direction: column; gap: 0.25rem; }
+    .item-name { font-weight: 700; font-size: 1rem; word-break: break-word; }
+    .item-desc { font-size: 0.8125rem; color: var(--muted-text); line-height: 1.3; }
+    .price-container { display: flex; flex-direction: column; align-items: center; gap: 0.25rem; text-align: center; }
+    .old-price { font-size: 0.875rem; color: #888; text-decoration: line-through; font-weight: 500; }
+    .new-price { font-weight: 800; color: var(--brand-red); font-size: 1.25rem; }
+    .discount-badge { background: var(--brand-red); color: white; font-size: 0.6875rem; font-weight: 700;
+      padding: 0.1875rem 0.375rem; border-radius: 0.375rem; }
+    .quantity { 
+      position: absolute; bottom: 1rem; left: 1rem; 
+      background: rgba(48,188,26,0.1); color: var(--accent-green); 
+      font-weight: 700; padding: 0.25rem 0.75rem; border-radius: var(--radius-lg);
+      display: flex; align-items: center; gap: 0.5rem;
+    }
+    .qty { min-width: 1.5rem; text-align: center; }
     .cart-bar { position: fixed; left: 50%; transform: translateX(-50%); bottom: 2rem;
       width: calc(100% - 3rem); max-width: 28rem; padding: 0.875rem 1.25rem;
       background: rgba(255,255,255,0.9); backdrop-filter: blur(14px); border-radius: var(--radius-xl);
@@ -61,7 +67,13 @@
     .checkout-btn:hover { transform: translateY(-3px); }
     .login-banner { max-width: 75rem; margin: 1.5rem auto; padding: 1rem 1.5rem; border-radius: var(--radius-xl);
       background: rgba(255,255,255,0.9); backdrop-filter: blur(10px); box-shadow: var(--shadow); text-align: center; font-weight: 600; }
-    @media (max-width: 420px) { .item-img { height: 10rem; } }
+    @media (max-width: 420px) { .item-img { width: 100px; height: 100px; } .item-card { max-height: 120px; padding: 0.75rem; } }
+    /* Demo Overlay */
+    #demoOverlay { position: fixed; inset: 0; background: rgba(0,0,0,0.85); z-index: 100; display: flex; align-items: center; justify-content: center; flex-direction: column; gap: 1.5rem; color: white; text-align: center; padding: 2rem; }
+    #demoCard { transform: scale(0.9); }
+    .demo-text { font-size: 1.125rem; font-weight: 600; }
+    .demo-arrow { font-size: 2rem; animation: pulse 1.5s infinite; }
+    @keyframes pulse { 0%, 100% { opacity: 1; } 50% { opacity: 0.5; } }
   </style>
 </head>
 <body>
@@ -91,7 +103,27 @@
     <button class="checkout-btn" id="checkoutBtn">Checkout</button>
   </div>
 
-  <!-- External JavaScript -->
+  <!-- Demo Overlay -->
+  <div id="demoOverlay">
+    <div class="demo-text">Swipe right to add/increase item</div>
+    <div class="demo-arrow">→</div>
+    <div id="demoCard" class="item-card">
+      <div class="item-info">
+        <div class="item-name">Demo Item</div>
+        <div class="item-desc">Swipe to manage cart</div>
+        <div class="quantity"><div class="qty">0</div></div>
+      </div>
+      <div class="price-container">
+        <img src="https://via.placeholder.com/120" alt="Demo" class="item-img">
+        <div class="new-price">₹99</div>
+      </div>
+    </div>
+    <div class="demo-arrow">←</div>
+    <div class="demo-text">Swipe left to decrease/remove</div>
+    <button style="background: var(--brand-red); color: white; padding: 0.75rem 1.5rem; border: none; border-radius: var(--radius-lg); cursor: pointer; font-weight: 700;" onclick="document.getElementById('demoOverlay').style.display='none';">Got it!</button>
+  </div>
+
+  <!-- External JS -->
   <script src="items.js"></script>
 </body>
 </html>
